feat: add start slides

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Название доклада</title>
+    <title>Архитектура безопасной авторизации на примере протоколов OAuth и OIDC</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -83,14 +83,14 @@
   </head>
   <body class="shower list">
     <header class="caption">
-      <h1>Название доклада</h1>
-      <p>Василий Пупкин, Acme Corporation</p>
+      <h1>Архитектура безопасной авторизации на примере протоколов OAuth и OIDC</h1>
+      <p>Иван Поддубный, CTO Вебпрактик</p>
     </header>
 
     <section class="slide clear" id="cover">
       <div>
-        <h2>Название доклада</h2>
-        <p><b>Василий Пупкин</b><br>Acme Corporation</p>
+        <h2>Архитектура безопасной авторизации на примере протоколов OAuth и OIDC</h2>
+        <p><b>Иван Поддубный</b><br>CTO Вебпрактик</p>
       </div>
       <style>
         #cover {
@@ -104,7 +104,7 @@
         }
         #cover h2 {
           margin: 0;
-          font-size: 90px;
+          font-size: 60px;
           font-weight: 700;
         }
         #cover p {
@@ -113,6 +113,38 @@
           line-height: 150%;
         }
       </style>
+    </section>
+
+    <section class="slide">
+      <h2><span>Кто я</span></h2>
+      <ol>
+        <li>14+ лет в вебе. Прошел путь fullstack, teamlead</li>
+        <li>Работаю CTO в Вебпрактик (~140 человек)</li>
+        <li>Член программного комитета TechLeadConf, Podlodka Crew</li>
+        <li>Пишу на Typescript, Nodejs (Nest) и React, PHP</li>
+        <li>Организатор Ростовского PHP сообщества (400+ человек)</li>
+        <li>Влюблен в Linux, OpenSource.</li>
+      </ol>
+
+    </section>
+
+    <section class="slide clear">
+      <h2 style="font-size: 40px; position: relative; z-index: 2;"><span>Вебпрактик — веб-интегратор для корпораций</span></h2>
+      <img style="" width="900" class="cover" src="pictures/clients.svg" alt="">
+
+    </section>
+
+
+    <section class="slide">
+      <h2>Shower key features</h2>
+      <ol>
+        <li>Built on HTML, CSS and JavaScript</li>
+        <li>Works in all modern browsers</li>
+        <li>Themes are separated from engine</li>
+        <li>Fully keyboard accessible</li>
+        <li>Printable to PDF</li>
+      </ol>
+      <p class="note">Shower ['ʃəuə] noun. A person or thing that shows.</p>
     </section>
 
     <section class="slide">
