--- a/index.html
+++ b/index.html
@@ -814,7 +814,7 @@
     <p>
         https://north-leshiy.github.io/spa-auth-sec<br>
     </p>
-    <img src="pictures/qr.png" alt="" />
+    <img src="pictures/qr-code.gif" alt="" />
     <style>
 		#last-slide {
 			background: url("pictures/fc24-title.png") no-repeat center center;
