--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <li>Работаю CTO в Вебпрактик (~140 человек)</li>
         <li>Член программного комитета TechLeadConf, Podlodka Crew</li>
         <li>Пишу на Typescript, Nodejs (Nest) и React, PHP</li>
-        <li>Организатор Ростовского PHP сообщества (400+ человек)</li>
+        <li>Организатор Ростовского PHP-сообщества (400+ человек)</li>
         <li>Влюблен в Linux, OpenSource.</li>
     </ol>
 
@@ -175,23 +175,23 @@
 <section class="slide ">
     <h2><span>Вопросы в зал</span></h2>
     <ul>
-        <li>Кто из вас реализовывал авторизацию в SPA приложениях?</li>
-        <li class="next">Кто использовал для этого JWT токены?</li>
-        <li class="next">Кто читал OWASP рекомендации (или RFC 8725 JSON Web Token Best Current Practices) как сделать это безопасно?</li>
+        <li>Кто из вас реализовывал авторизацию в SPA-приложениях?</li>
+        <li class="next">Кто использовал для этого JWT-токены?</li>
+        <li class="next">Кто читал OWASP-рекомендации (или RFC 8725 JSON Web Token Best Current Practices), как сделать это безопасно?</li>
     </ul>
 </section>
 
 <section class="slide ">
     <h2><span>Проблемы первого раза для авторизации в SPA</span></h2>
     <ul>
-        <li class="next">Масса статей которые очень поверхностно разбирают лишь самые базовые аспекты</li>
+        <li class="next">Масса статей, которые очень поверхностно разбирают лишь самые базовые аспекты</li>
         <li class="next">Отсутствие знаний по грамотной эксплуатации <br> и защите токенов</li>
-        <li class="next">Следовать предписаниям велосипеда бекендеров, которые также часто не имеют должной экспертизы</li>
+        <li class="next">Следовать предписаниям велосипеда бэкендеров, которые также часто не имеют должной экспертизы</li>
     </ul>
 </section>
 
 <section class="slide ">
-    <h2 class="shout" style="font-size: 50px; padding: 0 70px; width: auto;">Как следствие мы можем встречать решения <br> с плохими практиками в области безопасности <br> на многих проектах</h2>
+    <h2 class="shout" style="font-size: 50px; padding: 0 70px; width: auto;">Как следствие, мы можем встречать решения <br> с плохими практиками в области безопасности <br> на многих проектах</h2>
 </section>
 
 <section class="slide ">
@@ -201,7 +201,7 @@
                 <img style="width: 300px; margin-right: 50px"  src="pictures/OWASP-Top-10-logo.png" alt="">
             </td>
             <td >
-                <h2 style="font-size: 40px; ">Ошибки авторизации <br> каждый год входят <br> в ТОП-10 разновидностей <br> уязвимостей OWASP</h2>
+                <h2 style="font-size: 40px; ">Ошибки авторизации <br> каждый год входят <br> в топ-10 разновидностей <br> уязвимостей OWASP</h2>
             </td>
         </tr>
     </table>
@@ -269,7 +269,7 @@
 
 
 <section class="slide ">
-    <h2 class="shout shrink" style="font-size: 60px;">Бекендер выплевывает вам JWT токен <br> в ответе на метод авторизации...</h2>
+    <h2 class="shout shrink" style="font-size: 60px;">Бэкендер выплевывает вам JWT-токен <br> в ответе на метод авторизации...</h2>
     <!--  @todo вывести сваггер  -->
 </section>
 
@@ -278,24 +278,24 @@
 </section>
 
 <section class="slide ">
-    <h2>Где хранить JWT токен на клиенте?</h2>
+    <h2>Где хранить JWT-токен на клиенте?</h2>
 
     <blockquote>
-        <p>Я могу сэкономить, не дергать лишний раз бекенд для получения данных пользователя, его групп и проч.</p>
+        <p>Я могу сэкономить, не дергать лишний раз бэкенд для получения данных пользователя, его групп и проч.</p>
     </blockquote>
 
-    По этому
+    Поэтому
     <ul>
-        <li>Сохраню его локально</li>
-        <li>Буду прикреплять к каждому запросу</li>
-        <li>И использовать данные для своего приложения</li>
+        <li>сохраню его локально</li>
+        <li>буду прикреплять к каждому запросу</li>
+        <li>и использовать данные для своего приложения</li>
     </ul>
 
 
 </section>
 
 <section class="slide ">
-    <h2>Где хранить JWT токен на клиенте?</h2>
+    <h2>Где хранить JWT-токен на клиенте?</h2>
 
     <table class="next">
         <tr>
@@ -310,7 +310,7 @@
         </tr>
         <tr class="next">
             <td>SSR</td>
-            <td><span class="next">не совместим</span></td>
+            <td><span class="next">несовместим</span></td>
             <td><span class="next">совместим</span></td>
         </tr>
         <tr class="next">
@@ -332,18 +332,18 @@
         </tr>
         <tr class="next">
             <td><span class="next">Плохо (XSS)</span></td>
-            <td><span class="next">невозможно т.к. httpOnly</span></td>
+            <td><span class="next">невозможно, т.к. httpOnly</span></td>
         </tr>
     </table>
 
     <ul class="next">
         <li>Токен должен быть зашифрован!</li>
-        <li>Делаем доп запрос на сервер чтобы его расшифровать (Можно использовать BFF)</li>
+        <li>Делаем доп. запрос на сервер, чтобы его расшифровать (Можно использовать BFF)</li>
     </ul>
 </section>
 
 <section class="slide ">
-    <h2>Сколько должен жить JWT токен?</h2>
+    <h2>Сколько должен жить JWT-токен?</h2>
     <p>Best Practices: 15-30min</p>
 </section>
 
@@ -352,7 +352,7 @@
     <ul>
         <li>Refresh token</li>
         <li>Хранение аналогично: localStorage / cookie httpOnly</li>
-        <li>Длительность: должен быть больше чем access token</li>
+        <li>Длительность: должен быть больше, чем access token</li>
         <li></li>
     </ul>
 
@@ -368,17 +368,17 @@
         </tr>
         <tr class="next">
             <td><span class="next">response interceptor клиента на 401, с перезапросом</span></td>
-            <td><span class="next">происходит фоном на бекенде</span></td>
+            <td><span class="next">происходит фоном на бэкенде</span></td>
         </tr>
     </table>
 </section>
 
 <section class="slide ">
-    <h2>Ротация Refresh токенов</h2>
+    <h2>Ротация Refresh token</h2>
     <ul>
         <li>При запросе нового access token, выдавать в т.ч. новый refresh token, делая старый устаревшим</li>
-        <li class="next">Идем дальше: объединять цепочку токенов в семейство. При попытке использовании старого refresh token - убивать всю семью.</li>
-        <li class="next">И все это больно делать если до этого мы сохраняли токен в storage, опять прийдется работать ручками</li>
+        <li class="next">Идем дальше: объединять цепочку токенов в семейство. При попытке использовании старого refresh token &mdash; убивать всю семью.</li>
+        <li class="next">И все это больно делать, если до этого мы сохраняли токен в storage, опять прийдется работать ручками</li>
     </ul>
 </section>
 
@@ -388,25 +388,25 @@
         <li class="next">blacklist (OWASP)</li>
         <li class="next">Но как же stateless?</li>
         <li class="next">Можно хранить на конкретном bff в отдельном кеше (redis)</li>
-        <li class="next">А раз у нас все равно появляется состояние на bff, то может и токены положить в редис, а на клиент отдавать старую добрую сессию.</li>
-        <li class="next">Ну а stateless останется для микросервисов которые за bff</li>
+        <li class="next">А раз у нас все равно появляется состояние на bff, то, может, и токены положить в редис, а на клиент отдавать старую добрую сессию</li>
+        <li class="next">Ну а stateless останется для микросервисов, которые за bff</li>
     </ul>
 </section>
 
 <section class="slide ">
     <h2><span>Как защитить токен от кражи? (Token Sidejacking)</span></h2>
     <ul>
-        <li class="next">csrf token в виде отдельной http_only cookie в котором хранить user context + random SHA256</li>
+        <li class="next">csrf token в виде отдельной http_only cookie, в котором хранить user context + random SHA256</li>
     </ul>
 </section>
 
 
 <section class="slide ">
-    <h2><span>JWT другие проблемы</span></h2>
+    <h2><span>JWT: другие проблемы</span></h2>
     <ul>
         <li>Уязвимости криптографии</li>
         <li>Множество векторов атак: Signature Forgery, Token Hijacking, Replay Attack, Key Exposure, Brute Force Key Attack, Key ID Injection, JWT Injection, CSRF, Leakage of Sensitive Data</li>
-        <li>Прежде чем ее использовать убедитесь что вам это точно (!) нужно. Может просто сессии?</li>
+        <li>Прежде чем ее использовать, убедитесь, что вам это точно (!) нужно. Может, просто сессии?</li>
     </ul>
 </section>
 
@@ -415,7 +415,7 @@
     <h2><span>Custom JWT авторизация: выводы</span></h2>
     <ul style="font-size: 23px;">
         <li>Фронтендер должен обладать знаниями в области основ безопасности авторизации JWT</li>
-        <li class="next">В данном случае т.к. у нас есть персданные и приложение публичное - по хорошему сказать бекендеру переделать на cookie httpOnly</li>
+        <li class="next">В данном случае, т.к. у нас есть персданные и приложение публичное &mdash; по-хорошему сказать бэкендеру переделать на cookie httpOnly</li>
         <li class="next">Бонусом: сильно меньше велосипедного кода на фронтенде, клиент более глупый и тонкий</li>
         <li class="next">Вариант с localstorage можно только во внутренней доверенной сети и для приложений без чувствительных данных</li>
         <li class="next">Нет готовых библиотек которые реализуют за вас bestpractices на фронтенде</li>
@@ -429,7 +429,7 @@
 </section>
 
 <section class="slide ">
-    <h2>Session аутентификация</h2>
+    <h2>Session-аутентификация</h2>
     <img width="400" style="float: right" src="pictures/session-auth.svg" alt="">
     <ul class="clear-list">
         <li><i class="plus"></i> Простота</li>
@@ -455,7 +455,7 @@
         <li class="next"><i class="plus"></i> Автоматическая ревалидация</li>
         <li class="next"><i class="plus"></i> CSRF</li>
         <li class="next"><i class="plus"></i> Ротация токенов</li>
-        <li class="next"><i class="minus"></i> Нет Refresh токена => нет механизма отзыва токенов</li>
+        <li class="next"><i class="minus"></i> Нет Refresh-токена => нет механизма отзыва токенов</li>
     </ol>
 </section>
 
@@ -482,15 +482,15 @@
 </section>
 
 <section class="slide ">
-    <h2>Как этом может работать</h2>
+    <h2>Как это может работать</h2>
     <img src="pictures/nextauth-auth.svg" width="700" class="cover" alt="">
 </section>
 
 <section class="slide ">
     <h2>Session: выводы</h2>
     <ul>
-        <li>Этот метод является предпочтительным практически всегда когда у вас нет микросервисов</li>
-        <li>Если у вас есть BFF, SSR и вам нужен быстрый старт - можно взять готовые инструменты инкапсулирующие многую сложность (authJS, nextAuth, nuxtAuth)</li>
+        <li>Этот метод является предпочтительным практически всегда, когда у вас нет микросервисов</li>
+        <li>Если у вас есть BFF, SSR, и вам нужен быстрый старт, &mdash; можно взять готовые инструменты, инкапсулирующие многую сложность (authJS, nextAuth, nuxtAuth)</li>
     </ul>
 </section>
 
@@ -507,10 +507,9 @@
             <mark>авторизации</mark>
         </li>
         <li class="next">Open ID Connect (OIDC) &mdash; стандарт
-            <mark>аутентификации</mark>
-                         , построенный на базе OAuth
+            <mark>аутентификации</mark>, построенный на базе OAuth
         </li>
-        <li class="next">Использование OAuth в качестве аутентификации считается не корректным, и может приводить к дополнительным уязвимостям и векторам атаки</li>
+        <li class="next">Использование OAuth в качестве аутентификации считается некорректным и может приводить к дополнительным уязвимостям и векторам атаки</li>
     </ul>
 </section>
 
@@ -567,11 +566,10 @@
 <section class="slide ">
     <h2>Применимость</h2>
     <ul style="font-size: 20px;">
-        <li class="next">OIDC чаще всего используется в группах приложений когда сервер авторизации (IDP) вынесен в отдельную сущность. Когда нужно SSO.
-            <br>
-                         Примеры:
+        <li class="next">OIDC чаще всего используется в группах приложений, когда сервер авторизации (IDP) вынесен в отдельную сущность. Когда нужно SSO.
+            <br>Примеры:
             <ul>
-                <li>Поставлен корпоративный KeyCloak который используется для семейства корпоративных приложений</li>
+                <li>Поставлен корпоративный KeyCloak, который используется для семейства корпоративных приложений</li>
                 <li>Или к примеру вы Яндекс, mail который вынес IDP во внешний сервис</li>
             </ul>
         </li>
@@ -581,10 +579,10 @@
 <section class="slide ">
     <h2>Применимость</h2>
     <ul style="font-size: 20px;">
-        <li class="next">Используются когда использую внешних поставщиков <br> (Google, Яндекс)</li>
+        <li class="next">Используются когда используют внешних поставщиков <br> (Google, Яндекс)</li>
         <li class="next">Используются когда вы делегировали функцию аутентификации во внешние сервисы IDP (Auth0/Okta)</li>
         <li class="next">Использование OIDC усложнит вашу архитектуру и добавит накладные расходы</li>
-        <li class="next">Не рационально использовать когда у вас нет группы приложений</li>
+        <li class="next">Нерационально использовать, когда у вас нет группы приложений</li>
     </ul>
 </section>
 
@@ -630,8 +628,8 @@
 
     <h3>Общие для OAuth и OIDC</h3>
     <ul>
-        <li><mark>Authorization Endpoint:</mark> для получения кода авторизации.</li>
-        <li><mark>Token Endpoint:</mark> для обмена кода авторизации на токен доступа.</li>
+        <li><mark>Authorization Endpoint:</mark> для получения кода авторизации</li>
+        <li><mark>Token Endpoint:</mark> для обмена кода авторизации на токен доступа</li>
     </ul>
 
     <h3>Только OIDC</h3>
@@ -681,7 +679,7 @@
 <section class="slide ">
     <h2>PKSE</h2>
     <ol>
-        <li>PKCE предотвращает атаку, при которой злоумышленник перехватывает authorization code, чтобы получить access-токен.</li>
+        <li>PKCE предотвращает атаку, при которой злоумышленник перехватывает authorization code, чтобы получить access-токен</li>
         <li><b>Когда нужно:</b> когда нет доверия каналам клиентом и сервером</li>
     </ol>
 </section>
@@ -697,7 +695,7 @@
 <section class="slide ">
     <h2 style="font-size: 50px;">Replay Attack <br>(атака повторного воспроизведения):</h2>
     <ul>
-        <li><b>Атака:</b> Злоумышленник перехватывает токен или авторизационный запрос и пытается повторно использовать его для входа или получения токенов.</li>
+        <li><b>Атака:</b> злоумышленник перехватывает токен или авторизационный запрос и пытается повторно использовать его для входа или получения токенов.</li>
         <li><b>Механизм защиты:</b>
             <mark>nonce</mark> обеспечивает уникальность каждого запроса и токена, что делает повторное использование токенов невозможным.</li>
     </ul>
@@ -716,7 +714,7 @@
 <section class="slide ">
     <h2 style="font-size: 50px;">Access Token Injection <br>(внедрение поддельного токена доступа):</h2>
     <ul>
-        <li><b>Атака:</b> Злоумышленник пытается внедрить поддельный <b>access-токен</b> для получения доступа к защищённым ресурсам.</li>
+        <li><b>Атака:</b> злоумышленник пытается внедрить поддельный <b>access-токен</b> для получения доступа к защищённым ресурсам.</li>
         <li><b>Механизм защиты:</b>
             <mark>at_hash</mark> проверяет целостность <b>access-токена</b>, исключая его подделку или подмену.</li>
     </ul>
@@ -743,7 +741,7 @@
 <section class="slide">
     <h2><span class="gray">Гейткиперы</h2>
     <ul class="clear-list">
-        <li><i class="plus"></i> Забирает почти всю боль с приложений бекенда и фронтенда</li>
+        <li><i class="plus"></i> Забирает почти всю боль с приложений бэкенда и фронтенда</li>
         <li class="next"><i class="plus"></i> Рекомендации по безопасности из коробки</li>
         <li class="next"><i class="plus"></i> Нет дублирования кода авторизации в каждом микросервисе</li>
     </ul>
@@ -764,7 +762,7 @@
     <h2><span class="gray">Готовые библиотеки</h2>
     <ol>
         <li>AuthJS поддерживает OIDC, но не сертифицирован</li>
-        <li>Стоит доверять в 1 очередь сертифицированным и обновляемым решениям</li>
+        <li>Стоит доверять в первую очередь сертифицированным и обновляемым решениям</li>
     </ol>
 
 <!--    @todo показать табличку дат библиотек-->
@@ -776,10 +774,10 @@
     <ul style="font-size: 18px;">
         <li class="next">Протоколы oAuth/OIDC подходят не для всех приложений, во многих случаях они могут быть слишком дороги и избыточны</li>
         <li class="next">Авторизация на сессиях остается самой простой и надежной классикой</li>
-        <li class="next">Кастомная реализация на JWT токенах имеет право на жизнь, но нужно капитально взвесить все "за" и "против".</li>
-        <li class="next">Какой бы подход не был выбран &mdash; желательно не хранить токены в localStorage, хранить в httpOnly cookie</li>
-        <li class="next">Хороший разработчик должен поверхностно разбираться в вопросах безопасности чтобы его приложения не попадали на самые типовые ошибки</li>
-        <li class="next">При выборе готовых решений обязательно смотрите на их текущую актуальность, и следите за выходом их обновлений</li>
+        <li class="next">Кастомная реализация на JWT-токенах имеет право на жизнь, но нужно капитально взвесить все "за" и "против".</li>
+        <li class="next">Какой бы подход ни был выбран &mdash; желательно не хранить токены в localStorage, хранить в httpOnly cookie</li>
+        <li class="next">Хороший разработчик должен поверхностно разбираться в вопросах безопасности, чтобы его приложения не попадали на самые типовые ошибки</li>
+        <li class="next">При выборе готовых решений обязательно смотрите на их текущую актуальность и следите за выходом их обновлений</li>
     </ul>
 </section>
 
@@ -793,7 +791,6 @@
         <li class="next">OIDC RFC</li>
         <li class="next">oAuth RFC</li>
         <li class="next">Gatekeeper</li>
-        <li class="next">etc</li>
     </ul>
 </section>
 
