--- a/index.html
+++ b/index.html
@@ -270,8 +270,8 @@
 
 
 <section class="slide ">
-  <h2 class="shout shrink" style="font-size: 60px;">Бэкендер выплевывает вам JWT-токен <br> в ответе на метод авторизации...</h2>
-  <img src="pictures/" alt="">
+  <img src="pictures/swagger-jwt.png" style="width: 400px; float: right" alt="">
+  <h2 class=" " style="font-size: 50px;">Бэкендер выплевывает <br> JWT-токен <br> в ответе на метод авторизации...</h2>
 </section>
 
 <section class="slide ">
@@ -821,8 +821,8 @@
 <section class="slide ">
   <h2><span class="gray">Готовые библиотеки</span></h2>
   <ol>
-    <li>AuthJS поддерживает OIDC, но не сертифицирован</li>
-    <li>Стоит доверять в первую очередь сертKифицированным и обновляемым решениям</li>
+    <li>Стоит доверять в первую очередь сертифицированным и обновляемым решениям</li>
+    <li>Есть несколько сертифицированных поддерживаемых библиотек, но их реализацию под капотом рекомендую просмотреть.</li>
   </ol>
 
   <!--    @todo показать табличку дат библиотек-->
