--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
 <!--</section>-->
 
 <section class="slide ">
-  <h2 class="shout">Применимость: Когда нужен OIDC</h2>
+  <h2 class="shout" style="font-size: 50px;">Применимость: Когда нужен OIDC</h2>
 </section>
 
 <section class="slide " style="text-align: center;">
@@ -626,15 +626,13 @@
 <!--  </ul>-->
 <!--</section>-->
 
-<!--<section class="slide ">-->
-<!--  <h2>Применимость</h2>-->
-<!--  <ul style="font-size: 20px;">-->
-<!--    <li class="next">Используются когда используют внешних поставщиков <br> (Google, Яндекс)</li>-->
-<!--    <li class="next">Используются когда вы делегировали функцию аутентификации во внешние сервисы IDP (Auth0/Okta)</li>-->
-<!--    <li class="next">Использование OIDC усложнит вашу архитектуру и добавит накладные расходы</li>-->
-<!--    <li class="next">Нерационально использовать, когда у вас нет группы приложений</li>-->
-<!--  </ul>-->
-<!--</section>-->
+<section class="slide ">
+  <h2>Применимость</h2>
+  <ul >
+    <li class="next">Использование OIDC усложнит вашу архитектуру <br> и добавит накладные расходы</li>
+    <li class="next">Нерационально использовать, если у вас нет группы приложений</li>
+  </ul>
+</section>
 
 <section class="slide ">
   <h2>OAuth/OIDC &mdash; не один стандарт</h2>
